# Subconscious-Server

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: subconscious-prod-AutoDeployTrigger-263d00ac-9901-40f4-be8e-e5ed04a48c16.yml
app/: config.py  database.py  main.py
app/models/: __init__.py  user.py  webhook.py
app/services/: provider_service.py  token_service.py
app/templates/: article.html  base.html  index.html
backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml
backend/app/: lmdb_client.py  main.py
backend/app/middleware/: auth_middleware.py
backend/app/routers/: auth.py  health.py  pages.py  users.py  webhooks.py
backend/app/schemas/: auth.py  user.py  webhook.py
backend/app/services/: auth_service.py  jwt_service.py  webhook_service.py
backend/app/templates/: base.html  blog.html  features.html
backend/migrations/: env.py
backend/tests/: conftest.py  test_email_auth.py  test_oauth_extended.py  test_webhooks.py
temp/: generate_env_values.py
tests/: test_auth.py  test_token_encryption.py
